nullaway_error_BFB3C4F7-77BA-446E-A326-F185B7882622.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/handler/AbstractHandlerMethodMapping.java:806: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.registration = registration;
			                  ^
    (see http://t.uber.com/nullaway )
